--- a/formReader.ipynb
+++ b/formReader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "Collapsed": "false"
    },
@@ -14,10 +14,60 @@
     "from skimage.feature import canny\n",
     "from skimage import data\n",
     "import PIL\n",
-    "from PIL import Image\n",
+    "from PIL import Image, ImageDraw\n",
     "import matplotlib.pyplot as plt\n",
     "import cv2\n",
     "import sys, subprocess, itertools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "def draw_chessboard(n=8, pixel_width=600):\n",
+    "    \"\"\"\n",
+    "    Draw an n x n chessboard using PIL.\n",
+    "    \"\"\"\n",
+    "    def sq_start(i):\n",
+    "        \"\"\"\n",
+    "        Return the square corners, suitable for use in PIL drawings\n",
+    "        \"\"\"\n",
+    "        return i*pixel_width / n\n",
+    "\n",
+    "    def square(i, j):\n",
+    "        \"\"\"\n",
+    "        Return the square corners, suitable for use in PIL drawing\n",
+    "        \"\"\"\n",
+    "        return map(sq_start, [i, j, i+1, j+1])\n",
+    "\n",
+    "    image = Image.new(\"L\", (pixel_width, pixel_width),color = 255)\n",
+    "    draw_square = ImageDraw.Draw(image).rectangle\n",
+    "    squares = (square(i,j)\n",
+    "        for i_start, j in zip(itertools.cycle((0, 1)), range(n))\n",
+    "            for i in range(i_start, n, 2))\n",
+    "\n",
+    "    for sq in squares:\n",
+    "        draw_square(list(sq), fill='black')\n",
+    "        image.save(\"chessboard%d.png\" % n)\n",
+    "draw_chessboard(1)\n",
+    "draw_chessboard(2)\n",
+    "draw_chessboard(3)\n",
+    "draw_chessboard(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "draw_chessboard(3)\n"
    ]
   },
   {
@@ -215,7 +265,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "import collections\n",
@@ -404,7 +456,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "verticalLines = np.array(verticalLines)\n",
@@ -496,7 +550,9 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "def line_intersection(line1, line2):\n",
@@ -523,7 +579,9 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
@@ -567,7 +625,9 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
@@ -657,7 +717,9 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
@@ -762,7 +824,9 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
@@ -821,7 +885,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": []
   }
@@ -842,7 +908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
