--- a/dataReader.ipynb
+++ b/dataReader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "Collapsed": "false"
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "Collapsed": "false"
    },
@@ -81,9 +81,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/gbernardino/opt/miniconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3051: DtypeWarning: Columns (6,27,55) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\CMRC\\Miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3063: DtypeWarning: Columns (6,27,55) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n",
-      "/Users/gbernardino/opt/miniconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3051: DtypeWarning: Columns (19) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\CMRC\\Miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3063: DtypeWarning: Columns (19) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     }
@@ -102,12 +102,13 @@
     "procedimientos.FechaDescripcion  = procedimientos.FechaDescripcion.map(pandas.to_datetime)\n",
     "from html.parser import HTMLParser\n",
     "pars =HTMLParser()\n",
-    "#pars.unescape"
+    "#pars.unescape\n",
+    "registersByCase = registros.groupby('Caso')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "Collapsed": "false"
    },
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "Collapsed": "false"
    },
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "Collapsed": "false",
     "scrolled": true
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "Collapsed": "false"
    },
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "Collapsed": "false"
    },
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "Collapsed": "false"
    },
@@ -237,7 +238,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e4581c3514e4ef786fbbef1a4274459",
+       "model_id": "b9f0286b96ef4907be50388cb51b77cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "Collapsed": "false"
    },
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "Collapsed": "false"
    },
@@ -330,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "Collapsed": "false"
    },
@@ -402,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "Collapsed": "false"
    },
@@ -433,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "Collapsed": "false"
    },
@@ -441,7 +442,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7902ebcf77e040b9a69f783134905d3e",
+       "model_id": "7544fda2e3294ce28a962989574218c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -456,7 +457,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/gbernardino/opt/miniconda3/lib/python3.7/site-packages/ipykernel_launcher.py:33: DeprecationWarning: The unescape method is deprecated and will be removed in 3.5, use html.unescape() instead.\n"
+      "C:\\Users\\CMRC\\Miniconda3\\lib\\site-packages\\ipykernel_launcher.py:33: DeprecationWarning: The unescape method is deprecated and will be removed in 3.5, use html.unescape() instead.\n"
      ]
     },
     {
@@ -491,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "Collapsed": "false"
    },
@@ -499,7 +500,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "808990f5dad5492682bf822546bb184f",
+       "model_id": "da2782e4c1c1463daee7d3aee4658dff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -540,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "Collapsed": "false"
    },
@@ -553,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "Collapsed": "false"
    },
@@ -568,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "Collapsed": "false"
    },
@@ -579,7 +580,7 @@
        "96"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "Collapsed": "false"
    },
@@ -604,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "Collapsed": "false"
    },
@@ -644,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {
     "Collapsed": "false"
    },
@@ -652,7 +653,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c1158b076574c40b08669d76ef539d5",
+       "model_id": "15cf2866f34c457fa7a8a094a5bee47a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -669,7 +670,7 @@
        "<function __main__.<lambda>(i)>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "Collapsed": "false"
    },
@@ -704,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "Collapsed": "false"
    },
@@ -1514,7 +1515,6 @@
    ],
    "source": [
     "wrongParse = 0\n",
-    "registersByCase = registros.groupby('Caso')\n",
     "for c,v in interventionToCase.items():\n",
     "    xmlDesc = procedimientos.loc[c].XmlDescripcion\n",
     "    idProc = getProcFromXMLString(procedimientos.loc[c].XmlDescripcion)\n",
@@ -2258,6 +2258,52 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Leaving the hospital\n",
+    "Search when they left the hospital, and in which state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for c, r in registersByCase.groups.items():\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'dict' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-32-e8de3c550794>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mregistersByCase\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroups\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'dict' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "registersByCase.groups()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -2276,7 +2322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
