now I can get the max/min pressure by day

--- a/getPressures.ipynb
+++ b/getPressures.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "import pandas, numpy as np,re\n",
@@ -53,17 +55,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\CMRC\\Miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3063: DtypeWarning: Columns (6,24,25,27,55) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "/Users/gbernardino/opt/miniconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3051: DtypeWarning: Columns (6,24,25,27,55) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n",
-      "C:\\Users\\CMRC\\Miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3063: DtypeWarning: Columns (33,37,39,51,75) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "/Users/gbernardino/opt/miniconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3051: DtypeWarning: Columns (33,37,39,51,75) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n",
-      "C:\\Users\\CMRC\\Miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3063: DtypeWarning: Columns (9,16,19) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "/Users/gbernardino/opt/miniconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3051: DtypeWarning: Columns (9,16,19) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     }
@@ -81,7 +85,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "registrosByCasos = registros.groupby('Caso')"
@@ -89,8 +95,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "def identifyPressureInText(text):\n",
@@ -103,6 +111,7 @@
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {
+    "Collapsed": "false",
     "scrolled": true
    },
    "outputs": [
@@ -8981,15 +8990,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {
+    "Collapsed": "false",
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d06e814a69604aaa9b89deba41d53b63",
+       "model_id": "638ba5c8bfc84b3a967150f0c27db0c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -9033,36 +9043,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['IdAdmision', 'CodSignoVitalTipo', 'IdVia', 'Valor', 'Fecha', 'Anulado',\n",
-       "       'FechaRegistro', 'Usuario', 'Estacion', 'Aplicacion', 'IdRegistro',\n",
-       "       'UnidadFuncional'],\n",
-       "      dtype='object')"
+       "[['2019-01-25 11:14:04.663', '120/70'],\n",
+       " ['2019-02-06 08:41:12.373', '110/70'],\n",
+       " ['2019-02-15 06:50:48.527', '140/90'],\n",
+       " ['2019-02-15 10:37:21.733', '110/80'],\n",
+       " ['2019-02-19 06:56:01.517', '130/85'],\n",
+       " ['2019-02-19 07:24:04.057', '110/60'],\n",
+       " ['2019-02-20 10:11:26.203', '100/70'],\n",
+       " ['2019-02-20 10:19:59.753', '120/70'],\n",
+       " ['2019-02-20 18:11:42.083', '120/60'],\n",
+       " ['2019-02-26 08:53:47.600', '100/80'],\n",
+       " ['2019-03-01 11:00:39.703', '110/70'],\n",
+       " ['2019-03-06 09:43:16.547', '100/60'],\n",
+       " ['2019-03-06 10:11:39.147', '110/70'],\n",
+       " ['2019-03-10 06:12:22.330', '130/80'],\n",
+       " ['2019-03-11 09:48:20.700', '110/60'],\n",
+       " ['2019-03-13 09:23:58.977', '110/70'],\n",
+       " ['2019-03-13 10:05:53.303', '120/70'],\n",
+       " ['2019-03-13 10:13:10.523', '110/70'],\n",
+       " ['2019-03-15 08:21:32.083', '110/70'],\n",
+       " ['2019-03-15 09:54:41.447', '110/70'],\n",
+       " ['2019-03-19 09:04:53.473', '110/70'],\n",
+       " ['2019-03-19 09:32:38.480', '110/70'],\n",
+       " ['2019-03-19 10:15:15.167', '110/70'],\n",
+       " ['2019-03-22 10:40:40.103', '140/80'],\n",
+       " ['2019-03-27 10:28:06.793', '110/70'],\n",
+       " ['2019-04-02 08:35:04.190', '110/70'],\n",
+       " ['2019-04-03 10:36:11.023', '120/90'],\n",
+       " ['2019-04-10 09:04:41.810', '110/70'],\n",
+       " ['2019-04-12 08:24:33.507', '110/70'],\n",
+       " ['2019-04-12 09:46:56.557', '110/70'],\n",
+       " ['2019-04-12 09:59:39.277', '110/70'],\n",
+       " ['2019-04-23 07:59:52.730', '110/70'],\n",
+       " ['2019-04-23 10:13:09.987', '110/70'],\n",
+       " ['2019-04-23 10:36:31.407', '130/90'],\n",
+       " ['2019-04-24 09:46:17.527', '110/70'],\n",
+       " ['2019-04-26 09:25:02.317', '110/80'],\n",
+       " ['2019-04-26 09:36:35.710', '110/70'],\n",
+       " ['2019-04-29 14:20:37.460', '110/80'],\n",
+       " ['2019-04-29 15:36:29.327', '110/80'],\n",
+       " ['2019-04-30 11:11:48.080', '110/80'],\n",
+       " ['2019-04-30 14:10:30.950', '110/80'],\n",
+       " ['2019-04-30 14:47:11.890', '120/70'],\n",
+       " ['2019-04-30 14:50:13.813', '120/70'],\n",
+       " ['2019-04-30 14:51:19.373', '110/70'],\n",
+       " ['2019-04-30 17:15:43.877', '110/70'],\n",
+       " ['2019-05-03 07:51:33.710', '110/80'],\n",
+       " ['2019-05-03 10:24:19.637', '110/80'],\n",
+       " ['2019-05-06 10:42:15.063', '118/80'],\n",
+       " ['2019-05-10 10:33:21.710', '100/70'],\n",
+       " ['2019-05-11 08:31:04.230', '120/70'],\n",
+       " ['2019-05-11 08:37:44.603', '110/70'],\n",
+       " ['2019-05-14 09:36:01.187', '110/70'],\n",
+       " ['2019-05-15 09:29:50.910', '100/70'],\n",
+       " ['2019-05-15 11:07:10.953', '110/70'],\n",
+       " ['2019-05-20 09:01:33.970', '140/90'],\n",
+       " ['2019-05-21 08:41:09.170', '120/70'],\n",
+       " ['2019-05-21 09:27:37.757', '110/70'],\n",
+       " ['2019-05-24 10:10:27.980', '110/70'],\n",
+       " ['2019-05-24 10:26:06.743', '120/70'],\n",
+       " ['2019-05-30 06:31:09.970', '120/80'],\n",
+       " ['2019-05-31 09:36:54.170', '120/80'],\n",
+       " ['2019-06-04 08:48:33.587', '110/60'],\n",
+       " ['2019-06-05 09:54:21.763', '120/70'],\n",
+       " ['2019-06-07 10:23:00.780', '120/80'],\n",
+       " ['2019-06-07 10:30:44.613', '120/80'],\n",
+       " ['2019-06-12 10:03:55.117', '120/80'],\n",
+       " ['2019-06-19 13:26:24.470', '120/70'],\n",
+       " ['2019-07-02 07:50:15.330', '120/80'],\n",
+       " ['2019-07-08 13:03:49.703', '150/90'],\n",
+       " ['2019-07-12 08:25:20.690', '110/70'],\n",
+       " ['2019-07-12 09:03:47.937', '110/70'],\n",
+       " ['2019-07-19 10:00:44.550', '110/70'],\n",
+       " ['2019-07-19 11:09:18.323', '140/90'],\n",
+       " ['2019-07-22 14:07:49.173', '130/70'],\n",
+       " ['2019-07-23 11:48:19.460', '150/100'],\n",
+       " ['2019-07-24 08:37:46.110', '100/70'],\n",
+       " ['2019-07-26 09:20:08.523', '110/80'],\n",
+       " ['2019-07-26 09:25:59.923', '120/80'],\n",
+       " ['2019-07-26 09:36:15.560', '100/70'],\n",
+       " ['2019-08-06 09:59:52.140', '110/60'],\n",
+       " ['2019-08-09 10:13:53.380', '110/60'],\n",
+       " ['2019-08-09 11:25:05.890', '100/70'],\n",
+       " ['2019-08-12 13:23:23.543', '110/70'],\n",
+       " ['2019-08-13 09:05:01.733', '120/70'],\n",
+       " ['2019-08-14 10:56:46.770', '120/70'],\n",
+       " ['2019-08-16 09:32:51.837', '110/70'],\n",
+       " ['2019-08-23 09:09:03.850', '120/80'],\n",
+       " ['2019-08-23 09:28:38.477', '110/70'],\n",
+       " ['2019-08-23 10:00:47.840', '120/80'],\n",
+       " ['2019-08-23 10:07:41.087', '120/80'],\n",
+       " ['2019-08-30 08:08:54.243', '160/100'],\n",
+       " ['2019-09-02 13:32:43.043', '140/70'],\n",
+       " ['2019-09-03 10:43:09.000', '145/100'],\n",
+       " ['2019-09-11 10:54:53.550', '140/100'],\n",
+       " ['2019-09-11 11:58:17.067', '128/81'],\n",
+       " ['2019-09-17 14:10:15.503', '130/80'],\n",
+       " ['2019-09-19 14:03:25.597', '110/70'],\n",
+       " ['2019-09-24 09:42:45.590', '110/70'],\n",
+       " ['2019-09-25 11:57:16.130', '110/60'],\n",
+       " ['2019-10-01 10:49:26.883', '130/80'],\n",
+       " ['2019-10-08 10:10:25.673', '100/60'],\n",
+       " ['2019-10-08 10:53:47.563', '100/80'],\n",
+       " ['2019-10-09 11:42:52.800', '100/70'],\n",
+       " ['2019-10-09 12:10:45.433', '120/60'],\n",
+       " ['2019-10-16 11:16:47.457', '110/70'],\n",
+       " ['2019-10-16 12:14:27.390', '120/70'],\n",
+       " ['2019-10-23 09:52:54.220', '110/60'],\n",
+       " ['2019-10-25 14:05:26.630', '110/70'],\n",
+       " ['2019-11-06 10:13:55.090', '100/60'],\n",
+       " ['2019-11-13 10:17:58.330', '120/80'],\n",
+       " ['2019-11-13 10:25:46.220', '120/80'],\n",
+       " ['2019-11-18 12:44:43.667', '120/70'],\n",
+       " ['2019-11-18 16:11:36.197', '110/80'],\n",
+       " ['2019-11-19 08:20:44.700', '110/70'],\n",
+       " ['2019-11-19 08:28:27.430', '110/60'],\n",
+       " ['2019-11-20 08:30:03.640', '110/80'],\n",
+       " ['2019-11-20 10:42:28.613', '110/70'],\n",
+       " ['2019-11-20 11:21:46.510', '110/80'],\n",
+       " ['2019-11-20 11:43:53.380', '110/60'],\n",
+       " ['2019-12-13 12:41:20.927', '80/40'],\n",
+       " ['2019-12-16 13:55:05.200', '120/70'],\n",
+       " ['2019-12-26 13:51:20.760', '110/70'],\n",
+       " ['2020-01-08 09:32:53.183', '110/60'],\n",
+       " ['2020-01-08 09:33:49.363', '120/70'],\n",
+       " ['2020-01-09 17:46:46.247', '115/80'],\n",
+       " ['2020-01-14 09:24:07.777', '110/60'],\n",
+       " ['2020-01-14 09:34:31.567', '110/60'],\n",
+       " ['2020-01-14 09:39:54.383', '110/70'],\n",
+       " ['2020-01-14 10:36:06.300', '125/80'],\n",
+       " ['2020-01-15 15:12:36.690', '120/70']]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "allPressures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
    "source": [
     "medidasGrouped = medidas.groupby(['IdAdmision', 'Fecha'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7c68d0b161c4fa0b71c193a5eb3bc38",
+       "model_id": "0a2df9b84e134bf89366fe0654aca9b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -9091,58 +9242,116 @@
     "        tad = m[m.CodSignoVitalTipo == 'PRDI'].iloc[0].Valor\n",
     "    except:\n",
     "        continue\n",
-    "    allPressuresAllCases[c].append([date, '%d/%d' % (tas, tad)])\n"
+    "    if tas and tad:\n",
+    "        allPressuresAllCases[c].append([date, '%d/%d' % (tas, tad)])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 51,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "class PressureByDay():\n",
     "    def __init__(self):\n",
-    "        pass\n",
+    "        self.tasVals = collections.defaultdict(lambda: 0) \n",
+    "        self.tadVals = collections.defaultdict(lambda: 1000) \n",
     "    \n",
-    "    def addPressure"
+    "    def addPressure(self, date, p):\n",
+    "        date =  datetime.datetime.strptime(date.split()[0], '%Y-%m-%d')\n",
+    "        tas, tad = p.split('/')\n",
+    "        tas, tad = int(tas), int(tad)\n",
+    "        if tas and tad:\n",
+    "            self.tasVals[date] = max(self.tasVals[date], tas)\n",
+    "            self.tadVals[date] = min(self.tadVals[date], tad)\n",
+    "    def toDict(self):\n",
+    "        res = {}\n",
+    "        for i, d in enumerate(sorted(self.tasVals.keys())):\n",
+    "            res['pressure_day_%d' % i] = str(self.tasVals[d]) + '/' +  str(self.tadVals[d])\n",
+    "        return res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 54,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ff26814be5dd4dca9b5a1d39cd59dc25",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=29705), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import datetime\n",
-    "for c, v in allPressuresAllCases.items():\n",
-    "    \n",
-    "    break"
+    "pressures = {}\n",
+    "for c, v in tqdm.tqdm_notebook(allPressuresAllCases.items()):\n",
+    "    pd = PressureByDay()\n",
+    "    for (d, p) in v:\n",
+    "        if p == '/':\n",
+    "            continue\n",
+    "        pd.addPressure(d, p)\n",
+    "    pressures[c] = pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
+   "execution_count": 58,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "df = pandas.DataFrame.from_dict({ k:v.toDict()  for k, v in pressures.items()} , orient = 'index')\n",
+    "df.to_csv('maxMinPressures.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2019, 6, 13, 0, 0)"
+       "2"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "d = datetime.datetime.strptime(v[0][0].split()[0], '%Y-%m-%d')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": []
   }
@@ -9163,7 +9372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
