--- a/getPressures.ipynb
+++ b/getPressures.ipynb
@@ -54,7 +54,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "# Read\n",
     "- FC \n",
@@ -9012,7 +9014,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "def isMaternal(c, registers, raiseError = False):\n",
@@ -9029,7 +9033,7 @@
     "            return False\n",
     "        else:\n",
     "            return True\n",
-    "    except Exception as e:\n",
+    "    except KeyError as e:\n",
     "        if raiseError:\n",
     "            raise(e)\n",
     "        else:\n",
@@ -9039,7 +9043,9 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -9244,6 +9250,7 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {
+    "Collapsed": "false",
     "scrolled": true
    },
    "outputs": [],
@@ -9256,7 +9263,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
@@ -9287,7 +9296,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
@@ -10197,7 +10208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
