Working on making it compatible with SIP.
There will be a LOT of missing data (5 - 10) Many variables that can be found only on text

--- a/dataReader.ipynb
+++ b/dataReader.ipynb
@@ -15053,8 +15053,10 @@
     "        antecedentes.append('Asma')\n",
     "    if 'CARDIO' in t:\n",
     "        antecedentes.append('Cardo')\n",
-    "    if 'PREECLAMPSIA' in t:\n",
-    "        antecedentes.append('Preclampsia')\n",
+    "    if 'ECLAMP' in t and 'PRE' in t: \n",
+    "        antecedentes.append('Preeclampsia')\n",
+    "    elif 'ECLAMP' in t and :\n",
+    "        antecedentes.append('Eclampsia')\n",
     "\n",
     "    return antecedentes"
    ]
@@ -17125,7 +17127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
