Working on generating a SIP compatible code...
Data cleaning is important: there are repeated registers (with small differences such as corrected typos), and the codes are not to be trusted...

--- a/dataReader.ipynb
+++ b/dataReader.ipynb
@@ -15296,7 +15296,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H2974\n",
+      "H2975\n",
+      "H3099\n",
+      "H3100\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c, v in classificationProcedures.items():\n",
+    "    if v == 'a':\n",
+    "        print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "Collapsed": "false",
     "scrolled": true
