--- a/dataReader.ipynb
+++ b/dataReader.ipynb
@@ -560,7 +560,8 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "scrolled": true
    },
    "outputs": [
     {
