Parsing APGAR / improved parsing of paraclinics / starting to load in mdb file
TODO:
- abortions
- parse morbilidad
- add paraclinics on the notes
- add paraclinics / measurements to the main dataframe
- add echos

--- a/databaseFun.ipynb
+++ b/databaseFun.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def writeInChunks(path, sql, cnxn, chunksize = 100000):\n",
+    "def writeInChunks(path, sql, cnxn, chunksize = 10000):\n",
     "    \"\"\"\n",
     "    Writes an sql in chunk to avoid memory problems\n",
     "    \"\"\" \n",
@@ -51,24 +51,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sql = \"SELECT * FROM Casos WHERE Paciente IN ( SELECT Id FROM Pacientes WHERE Identificacion LIKE 'VEN%')\"\n",
-    "chunks = pandas.read_sql_query(sql, cnxn, chunksize=1000)\n"
+    "sql = \"SELECT * FROM Casos WHERE Paciente IN ( SELECT Id FROM Pacientes WHERE Identificacion LIKE 'VEN%')\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "sql = \"SELECT Id From Patients \"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chunk written\n"
+     ]
+    }
+   ],
    "source": [
     "sqlVenezolanas = \"SELECT Id FROM Pacientes WHERE Identificacion LIKE 'VEN%'\"\n",
     "def downloadPatientsAndRegistersFromPatients(cnxn, sqlPatients, pathWriteFolder):\n",
@@ -92,7 +90,8 @@
     "    writeInChunks(os.path.join(pathWriteFolder,'casos.csv'), sqlCasos, cnxn)\n",
     "    writeInChunks(os.path.join(pathWriteFolder,'procedimientos.csv'), sqlProcedimientos, cnxn)\n",
     "    writeInChunks(os.path.join(pathWriteFolder,'pacientes.csv'), sqlPacientes, cnxn)\n",
-    "    writeInChunks(os.path.join(pathWriteFolder,'enfermeriaMedidas.csv'), sqlDatosEnfermeria, cnxn)\n"
+    "    writeInChunks(os.path.join(pathWriteFolder,'enfermeriaMedidas.csv'), sqlDatosEnfermeria, cnxn)\n",
+    "downloadPatientsAndRegistersFromPatients(cnxn, sqlVenezolanas, 'Venezolanas2')"
    ]
   },
   {
@@ -217,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,119 +226,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pandas.read_csv('resultsSIP.csv', index_col = 0)\n",
+    "df['ID01'] = df['VAR_0019'].map(lambda s: '000000000008060061-80000000000' + s)\n",
+    "df['VAR_0198'] = df['VAR_0198'].map(lambda s: str(int(s)) if s == s else s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fullCols = list(map(lambda s: s, cursor.columns(table='nivel_N1')))\n",
+    "colNames = list(map(lambda s: s[3], cursor.columns(table='nivel_N1')))\n",
+    "cols = []\n",
+    "values = []\n",
+    "i = 0\n",
+    "for c in colNames:\n",
+    "    \n",
+    "    if c in df and df.iloc[i][c] == df.iloc[i][c]:\n",
+    "        cols.append(c)\n",
+    "        values.append(df.iloc[i][c])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MSysAccessObjects\n",
-      "MSysAccessXML\n",
-      "MSysACEs\n",
-      "MSysIMEXColumns\n",
-      "MSysIMEXSpecs\n",
-      "MSysNavPaneGroupCategories\n",
-      "MSysNavPaneGroups\n",
-      "MSysNavPaneGroupToObjects\n",
-      "MSysNavPaneObjectIDs\n",
-      "MSysObjects\n",
-      "MSysQueries\n",
-      "MSysRelationships\n",
-      "________Version 414\n",
-      "aux_Envio\n",
-      "aux_Historial\n",
-      "aux_Informacion\n",
-      "aux_Instituciones_Local\n",
-      "aux_movimientos\n",
-      "aux_Tablas_x_Sistemas\n",
-      "aux_Usuarios\n",
-      "aux_Version\n",
-      "nivel_00\n",
-      "nivel_01\n",
-      "nivel_02\n",
-      "nivel_03\n",
-      "nivel_04\n",
-      "nivel_05\n",
-      "nivel_06\n",
-      "nivel_11\n",
-      "nivel_12\n",
-      "nivel_13\n",
-      "nivel_16\n",
-      "nivel_21\n",
-      "nivel_22\n",
-      "nivel_31\n",
-      "nivel_32\n",
-      "nivel_33\n",
-      "nivel_34\n",
-      "nivel_41\n",
-      "nivel_51\n",
-      "nivel_52\n",
-      "nivel_55\n",
-      "nivel_56\n",
-      "nivel_57\n",
-      "nivel_61\n",
-      "nivel_71\n",
-      "nivel_72\n",
-      "nivel_73\n",
-      "nivel_74\n",
-      "nivel_75\n",
-      "nivel_76\n",
-      "nivel_77\n",
-      "nivel_81\n",
-      "nivel_82\n",
-      "nivel_83\n",
-      "nivel_84\n",
-      "nivel_85\n",
-      "nivel_86\n",
-      "nivel_91\n",
-      "nivel_92\n",
-      "nivel_93\n",
-      "nivel_94\n",
-      "nivel_95\n",
-      "nivel_96\n",
-      "nivel_A1\n",
-      "nivel_A2\n",
-      "nivel_A3\n",
-      "nivel_N1\n",
-      "nivel_N2\n",
-      "nivel_N3\n",
-      "nivel_N4\n",
-      "nivel_N5\n",
-      "nivel_N6\n",
-      "nivel_N7\n",
-      "nivel_N8\n",
-      "nivel_S1\n",
-      "nivel_S2\n",
-      "nivel_S3\n",
-      "nivel_S4\n",
-      "nivel_S5\n",
-      "nivel_S6\n",
-      "nivel_T1\n",
-      "nivel_T2\n",
-      "nivel_T3\n",
-      "nivel_T4\n",
-      "nivel_T5\n",
-      "nivel_T6\n",
-      "nivel_z0\n",
-      "Consulta_01\n",
-      "Consulta_02\n",
-      "Consulta_03\n",
-      "Consulta_04\n",
-      "Consulta_05\n",
-      "Consulta_06\n",
-      "Consulta_61\n",
-      "Consulta_N1\n",
-      "Consulta_N2\n",
-      "Consulta_N3\n",
-      "Consulta_N4\n",
-      "Consulta_N5\n",
-      "Consulta_N6\n",
-      "Consulta_N7\n",
-      "Consulta_N8\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\"insert into nivel_N1(ID01,VAR_0006,VAR_0012,VAR_0013,VAR_0015,VAR_0018,VAR_0019,VAR_0020,VAR_0022,VAR_0024,VAR_0026,VAR_0028,VAR_0030,VAR_0032,VAR_0040,VAR_0041,VAR_0046,VAR_0047,VAR_0055,VAR_0056,VAR_0057,VAR_0059,VAR_0183,VAR_0198,VAR_0282,VAR_0283,VAR_0284,VAR_0287,VAR_0293,VAR_0297,VAR_0298,VAR_0310,VAR_0311,VAR_0313,VAR_0314,VAR_0321,VAR_0322,VAR_0343,VAR_0425) values ('000000000008060061-80000000000VEN25322789','1996-03-28 00:00:00','B','C','D','CMRC','VEN25322789','A','A','B','A','A','A','A','2.0','0.0','2.0','0.0','65.0','60.0','07/06/1954','A','2016-08-27 22:59:00','39','A','02:25 a.m.','28/08/2016','A','X','B','A','B','2100.0','31.0','43.0','6.0','9.0','A','2016-08-30')\""
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "\"insert into nivel_N1(%s) values (\\'%s\\')\" % ( ','.join(cols), '\\',\\''.join(map(str,values)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = \"insert into nivel_N1(ID01,VAR_0006,VAR_0012,VAR_0013,VAR_0015,VAR_0018,VAR_0019,VAR_0020,VAR_0022,VAR_0024,VAR_0026,VAR_0028,VAR_0030,VAR_0032,VAR_0040,VAR_0041,VAR_0046,VAR_0047,VAR_0055,VAR_0056,VAR_0057,VAR_0059,VAR_0183) values ('000000000008060061-80000000000VEN25322789','1996-03-28 00:00:00','B','C','D','CMRC','VEN25322789','A','A','B','A','A','A','A','2.0','0.0','2.0','0.0','65.0','60.0','07/06/1954','A','2016-08-27 22:59:00')\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function Cursor.execute>"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute(\"delete from nivel_N1 where ID01='%s'\" % values[0])\n",
+    "#cursor.execute(\"insert into nivel_N1(%s) values (\\'%s\\')\" % ( ','.join(cols[:23]), '\\',\\''.join(map(str,values[:23]))))\n",
+    "cursor.execute"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "cnxn = pyodbc.connect('Driver={Microsoft Access Driver (*.mdb, *.accdb)};'+ \\\n",
     "                      'DBQ=C:\\\\sip\\\\SIP_Respaldo\\\\sip20200302.mdb;')\n",
@@ -350,245 +319,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ID01\n",
-      "ID02\n",
-      "ID03\n",
-      "VAR_0001\n",
-      "VAR_0002\n",
-      "VAR_0003\n",
-      "VAR_0004\n",
-      "VAR_0005\n",
-      "VAR_0006\n",
-      "VAR_0009\n",
-      "VAR_0010\n",
-      "VAR_0011\n",
-      "VAR_0012\n",
-      "VAR_0013\n",
-      "VAR_0014\n",
-      "VAR_0015\n",
-      "VAR_0016\n",
-      "VAR_0017\n",
-      "VAR_0018\n",
-      "VAR_0019\n",
-      "VAR_0020\n",
-      "VAR_0022\n",
-      "VAR_0024\n",
-      "VAR_0026\n",
-      "VAR_0028\n",
-      "VAR_0030\n",
-      "VAR_0021\n",
-      "VAR_0023\n",
-      "VAR_0025\n",
-      "VAR_0027\n",
-      "VAR_0029\n",
-      "VAR_0031\n",
-      "VAR_0032\n",
-      "VAR_0033\n",
-      "VAR_0034\n",
-      "VAR_0035\n",
-      "VAR_0036\n",
-      "VAR_0037\n",
-      "VAR_0040\n",
-      "VAR_0038\n",
-      "VAR_0039\n",
-      "VAR_0041\n",
-      "VAR_0045\n",
-      "VAR_0046\n",
-      "VAR_0042\n",
-      "VAR_0047\n",
-      "VAR_0043\n",
-      "VAR_0044\n",
-      "VAR_0048\n",
-      "VAR_0049\n",
-      "VAR_0050\n",
-      "VAR_0051\n",
-      "VAR_0052\n",
-      "VAR_0053\n",
-      "VAR_0054\n",
-      "VAR_0055\n",
-      "VAR_0056\n",
-      "VAR_0057\n",
-      "VAR_0058\n",
-      "VAR_0059\n",
-      "VAR_0060\n",
-      "VAR_0080\n",
-      "VAR_0081\n",
-      "VAR_0082\n",
-      "VAR_0083\n",
-      "VAR_0084\n",
-      "VAR_0085\n",
-      "VAR_0086\n",
-      "VAR_0087\n",
-      "VAR_0088\n",
-      "VAR_0089\n",
-      "VAR_0090\n",
-      "VAR_0095\n",
-      "VAR_0096\n",
-      "VAR_0097\n",
-      "VAR_0098\n",
-      "VAR_0099\n",
-      "VAR_0100\n",
-      "VAR_0101\n",
-      "VAR_0102\n",
-      "VAR_0103\n",
-      "VAR_0104\n",
-      "VAR_0105\n",
-      "VAR_0106\n",
-      "VAR_0108\n",
-      "VAR_0107\n",
-      "VAR_0109\n",
-      "VAR_0110\n",
-      "VAR_0111\n",
-      "VAR_0093\n",
-      "VAR_0112\n",
-      "VAR_0115\n",
-      "VAR_0114\n",
-      "VAR_0182\n",
-      "VAR_0183\n",
-      "VAR_0184\n",
-      "VAR_0185\n",
-      "VAR_0186\n",
-      "VAR_0187\n",
-      "VAR_0188\n",
-      "VAR_0189\n",
-      "VAR_0190\n",
-      "VAR_0191\n",
-      "VAR_0192\n",
-      "VAR_0193\n",
-      "VAR_0194\n",
-      "VAR_0195\n",
-      "VAR_0196\n",
-      "VAR_0197\n",
-      "VAR_0198\n",
-      "VAR_0199\n",
-      "VAR_0200\n",
-      "VAR_0201\n",
-      "VAR_0202\n",
-      "VAR_0203\n",
-      "VAR_0204\n",
-      "VAR_0205\n",
-      "VAR_0206\n",
-      "VAR_0282\n",
-      "VAR_0283\n",
-      "VAR_0284\n",
-      "VAR_0285\n",
-      "VAR_0286\n",
-      "VAR_0287\n",
-      "VAR_0288\n",
-      "VAR_0289\n",
-      "VAR_0290\n",
-      "VAR_0291\n",
-      "VAR_0292\n",
-      "VAR_0293\n",
-      "VAR_0294\n",
-      "VAR_0295\n",
-      "VAR_0296\n",
-      "VAR_0297\n",
-      "VAR_0298\n",
-      "VAR_0299\n",
-      "VAR_0300\n",
-      "VAR_0301\n",
-      "VAR_0302\n",
-      "VAR_0303\n",
-      "VAR_0304\n",
-      "VAR_0305\n",
-      "VAR_0306\n",
-      "VAR_0308\n",
-      "VAR_0309\n",
-      "VAR_0310\n",
-      "VAR_0311\n",
-      "VAR_0312\n",
-      "VAR_0313\n",
-      "VAR_0314\n",
-      "VAR_0315\n",
-      "VAR_0316\n",
-      "VAR_0319\n",
-      "VAR_0317\n",
-      "VAR_0318\n",
-      "VAR_0320\n",
-      "VAR_0321\n",
-      "VAR_0322\n",
-      "VAR_0323\n",
-      "VAR_0324\n",
-      "VAR_0325\n",
-      "VAR_0326\n",
-      "VAR_0327\n",
-      "VAR_0328\n",
-      "VAR_0331\n",
-      "VAR_0332\n",
-      "VAR_0333\n",
-      "VAR_0334\n",
-      "VAR_0335\n",
-      "VAR_0368\n",
-      "VAR_0336\n",
-      "VAR_0337\n",
-      "VAR_0339\n",
-      "VAR_0341\n",
-      "VAR_0343\n",
-      "VAR_0346\n",
-      "VAR_0347\n",
-      "VAR_0345\n",
-      "VAR_0344\n",
-      "VAR_0329\n",
-      "VAR_0330\n",
-      "VAR_0371\n",
-      "VAR_0425\n",
-      "VAR_0370\n",
-      "VAR_0373\n",
-      "VAR_0374\n",
-      "VAR_0375\n",
-      "VAR_0372\n",
-      "VAR_0376\n",
-      "VAR_0377\n",
-      "VAR_0378\n",
-      "VAR_0348\n",
-      "VAR_0395\n",
-      "VAR_0388\n",
-      "VAR_0389\n",
-      "VAR_0390\n",
-      "VAR_0258\n",
-      "VAR_0260\n",
-      "VAR_0266\n",
-      "VAR_0261\n",
-      "VAR_0267\n",
-      "VAR_0273\n",
-      "VAR_0274\n",
-      "VAR_0275\n",
-      "VAR_0613\n",
-      "VAR_0627\n",
-      "VAR_0379\n",
-      "VAR_0382\n",
-      "VAR_0381\n",
-      "VAR_0391\n",
-      "VAR_0383\n",
-      "VAR_0385\n",
-      "VAR_9000\n",
-      "VAR_0408\n",
-      "LIBRE1\n",
-      "LIBRE2\n",
-      "LIBRE3\n",
-      "LIBRE4\n",
-      "LIBRE5\n",
-      "LIBRE6\n",
-      "VERSION\n",
-      "FECHA\n",
-      "HORA\n",
-      "USUARIO\n",
-      "CONTROL\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pandas.read_sql_query(\"select top 10 * from Nivel_N1\", cnxn)\n",
-    "for c in df.columns:\n",
-    "    print(c)"
+    "cursor.execute(\"insert into nivel_N1(id, name) values ('pyodbc', 'awesome library')\")\n",
+    "cnxn.commit()\n"
    ]
   },
   {
