working on parsing the measurements (vital signs and tests)

--- a/getPressures.ipynb
+++ b/getPressures.ipynb
@@ -9199,6 +9199,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "def identifyPressureInText(text):\n",
+    "    text = cleanString(text).upper()\n",
+    "    return re.findall('(?:TA|PA|TENSION|PRESION)\\s*([0-9]+)[-/]([0-9]+)\\s*MMHG', text )\n",
+    "    \n",
+    "def identifyHRInText(text):\n",
+    "    text = cleanString(text).upper()\n",
+    "    return re.findall('(?:FC)\\s*([0-9]+)', text )\n",
+    "\n",
+    "def identifyRRInText(text):\n",
+    "    text = cleanString(text).upper()\n",
+    "    return re.findall('(?:FR)\\s*([0-9]+)', text )\n",
+    "\n",
+    "def identifyTInText(text):\n",
+    "    text = cleanString(text).upper()\n",
+    "    return re.findall('(?:T)\\s*(%s)' % floatParse, text )\n",
+    "\n",
+    "\n",
+    "def parseVitalSignsFromRegister(r):\n",
+    "    res = {}\n",
+    "    et = ET.fromstring(r.RegistroXML)\n",
+    "    fecha = r.FechaAsignacionRegistro\n",
+    "    txt = fullCleanTxt(findInXML('DescripcionNota', et))\n",
+    "\n",
+    "    # Pressure\n",
+    "    pressure = findInXML('Presion', et)\n",
+    "    if not pressure or pressure == '/':\n",
+    "        if txt:\n",
+    "            pressure = identifyPressureInText(txt)\n",
+    "            if pressure:\n",
+    "                pressure = '/'.join(pressure[0])\n",
+    "    if pressure:\n",
+    "        res['P'[ = (fecha, pressure)\n",
+    "\n",
+    "    # FC\n",
+    "    fc = findInXML('FrecuenciaCardiaca', et)\n",
+    "    if not fc:\n",
+    "        if txt:\n",
+    "            fc = identifyHRInText(txt)\n",
+    "            if fc:\n",
+    "                fc = fc[0]\n",
+    "    if fc:\n",
+    "        res['hr'] = (fecha, fc)\n",
+    "\n",
+    "    # RR\n",
+    "    rr = findInXML('FrecuenciaRespiratoria', et)\n",
+    "    if not rr:\n",
+    "        if txt:\n",
+    "            rr = identifyRRInText(txt)\n",
+    "            if rr:\n",
+    "                rr = rr[0]\n",
+    "    if rr:\n",
+    "        res['rr'] = (fecha, fc)\n",
+    "\n",
+    "    # T    \n",
+    "    temperature = findInXML('Temperatura', et)\n",
+    "    if not temperature or temperature == '/':\n",
+    "        if txt:\n",
+    "            temperature = identifyTInText(txt)\n",
+    "            if temperature:\n",
+    "                temperature = temperature[0]\n",
+    "    if temperature:\n",
+    "        res['T'] = (fecha, temperatureture)\n",
+    "    return res\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "Collapsed": "false",
@@ -9462,7 +9535,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -9560,7 +9635,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "date =  '\\(?' +  '((?:[0-9]+)'+ sep + separadorFecha + sep + '(?:[0-9]+|%s)'%  '|'.join(meses) + \\\n",
@@ -9629,7 +9706,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "for p, m in "
@@ -9638,7 +9717,9 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "ename": "NameError",
@@ -9659,7 +9740,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": []
   }
@@ -9680,7 +9763,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
