added error metrics and  solved some issues when comparing different daya.
TODO: add data prioerity

--- a/databaseTransformer.ipynb
+++ b/databaseTransformer.ipynb
@@ -167,13 +167,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "math.fabs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def relErrorInLimits(v1, v2, th = .05):\n",
+    "    try:\n",
+    "        v1 = float(v1)\n",
+    "        v2 = float(v2)\n",
+    "        relErr =  2 * math.fabs(v1 - v2)/(v1 + v2)\n",
+    "        return relErr < th\n",
+    "    except:\n",
+    "        return False\n",
     "def joinDicts(d1, d2):\n",
+    "    d1 = d1.copy()\n",
     "    d2 = d2.copy()\n",
     "    for k in d1:\n",
     "        if k in d2 and d1[k] != d2[k]:\n",
-    "            d2['error_key_%s' % str(k)] = True\n",
+    "            if relErrorInLimits(d1[k], d2[k]):\n",
+    "                d1[k] = (float(d1[k]) + float(d2[k]))/2\n",
+    "            else:\n",
+    "                d2['error_key_%s' % str(k)] = (True, (d1[k], d2[k]))\n",
     "    d2.update(d1)\n",
     "    return d2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "relErrorInLimits(54, 51)"
    ]
   },
   {
@@ -204,6 +235,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Quality control\n",
+    "n = len(df)\n",
+    "for c in df.columns:\n",
+    "    if sum(df[c] != df[c])/n > .05:\n",
+    "        print(c, sum(df[c] != df[c])/n )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "66/2100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import parseMeasurementsByDay\n",
     "importlib.reload(parseMeasurementsByDay)\n",
@@ -213,15 +273,6 @@
     "    measurements[c] = parseMeasurementsByDay.getParaClinicsHospitalisation(p) + parseMeasurementsByDay.getAllVitalSigns(p)\n",
     "    if p.epicrisis is not None:\n",
     "        measurementsControlsPrenatal[c] = parseMeasurementsByDay.parseParaclinicsBeforeHospitalisation(p.epicrisis)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfMeasurements.groupby('Campo')['Valor'].agg(['median', 'max', 'min'])"
    ]
   },
   {
